2014-06-08  Mark Majeres  <mark@engine12.com>
	* src/text.c (do_delete, do_deletion, do_undo, do_redo, update_undo):
	Differentiate between undoing a Delete and undoing a Backspace -- the
	cursor should be in a slightly but significantly different position.

2014-06-04  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (shortcut_init), src/files.c (do_insertfile): Rename
	'ext_cmd_void' to 'flip_execute_void' to better match what it does.
	* src/global.c (strtosc), doc/man/nanorc.5, doc/texinfo/nano.texi:
	Add function name 'flipexecute' to enable rebinding ^X in the menus
	Read File and Execute Command.

2014-06-04  David Lawrence Ramsey  <pooka109@gmail.com>
	* src/*.c: Adjustments of whitespace and comments.
	* doc/nanorc.sample.in: Interpunction tweaks.
	* src/global.c (add_to_funcs): Add cast to subnfunc* for nmalloc().
	* src/files.c (do_lockfile): Properly make the variable 'lockfilesize'
	a size_t instead of a ssize_t, since it holds the result of strlen().
	And use charalloc() instead of (char *)nmalloc().
	* src/text.c (do_undo): Use charealloc() and not (char *)nrealloc().
	* src/text.c (add_undo): Make use of null_at() to both null-terminate
	the multibyte character and align it to use only the amount of memory
	necessary.

GNU nano 2.3.4 - 2014.06.02
2014-06-02  Chris Allegretta <chrisa@asty.org>
	* doc/syntax/default.nanorc: Can't do trailing spaces in the
	  default syntax or it will hilight the spaces as you type them
	  into a new file, which for non-programming is infuriating.

2014-05-29  Mark Majeres  <mark@engine12.com>
	* src/text.c (do_delete): For the undo structure, differentiate
	between deleting a newline and any other character.

2014-05-29  Chris Allegretta <chrisa@asty.org>
	* src/chars.c (addstrings): This function needs to be available even
	  on non-utf-8 systems.
	* nano-regress: Added --disable-utf8 to regression check.

GNU nano 2.3.3 - 2014.05.29
2014-05-28  Chris Allegretta <chrisa@asty.org>