@@ -2037,7 +2037,7 @@ void do_output(char *output, size_t output_len, bool allow_cntrls)
 #ifndef DISABLE_WRAPPING
 	/* If we're wrapping text, we need to call edit_refresh(). */
 	if (!ISSET(NO_WRAP))
-	    if (do_wrap(openfile->current, FALSE))
+	    if (do_wrap(openfile->current))
 		edit_refresh_needed = TRUE;
 #endif
 
